# CryptoInvestor

./: .cursorrules  .gitignore  CLAUDE.md  COMPREHENSIVE_COMPARISON_REPORT.txt  DISCREPANCY_ANALYSIS.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_STANDALONE_DCA_REPORT.md  FINAL_SUCCESS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Optimum DCA clubhouse.xlsx  Optimum DCA.xlsx  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_V2.md  README_v1_ARCHIVED.md  TEST_SUMMARY.md  calibrated_standalone_dca.py  excel_validator.py  optimum_dca.py  optimum_dca_standalone.py  optimum_dca_test_report.txt  pyproject.toml  pytest.ini  test_optimum_dca.py  truly_final_excel_matching.py  truly_final_excel_matching_dca.csv  validation_summary.md
data/: bitcoin_prices.csv  expected_wdca.csv  expected_weekly_price.csv
docs/: PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SAMPLE_SIZE_OPTIMIZATION.md  analysis_report.md  test_failure_analysis.md  test_fixes_summary.md
docs/guides/: ANALYSIS_TOOL_GUIDE.md  DURATION_SIMULATION_README.md  REPORTS_GUIDE.md
docs/methodology/: STATISTICAL_IMPROVEMENTS.md  STATISTICAL_METHODOLOGY_COMPARISON.md
docs/updates/: DOCUMENTATION_CLEANUP_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  RESTRUCTURE_NOTES.md  RESTRUCTURE_SUMMARY.md  V2.1_UPDATE.md  statistical_tools_implementation.md  test_suite_expansion.md
examples/: quick_start.py
reference/: excel_file.xlsx  legacy_optimum_dca.py  ~$excel_file.xlsx
reports/analysis/: comprehensive_comparison_report.txt
reports/comparisons/: COMPREHENSIVE_COMPARISON_REPORT.txt  COMPREHENSIVE_COMPARISON_REPORT_v2.1.txt  method_comparison_summary.csv
reports/simulations/: duration_simulation_detailed_report.csv  duration_simulation_summary_report.txt  (+1 more)
requirements/: base.txt  dev.txt  test.txt
scripts/: __init__.py  run_tests.py
src/: __init__.py  optimum_dca_analyzer.py
tests/: __init__.py  test_advanced_duration_analyzer.py  test_balanced_rolling_analyzer.py  test_btc_balance_protection.py  test_comprehensive_comparison.py  test_dca_analyzer.py  test_duration_simulator.py  test_enhanced_statistical_analyzer.py  test_paired_strategy_comparison.py
tools/: advanced_duration_analyzer.py  balanced_rolling_analyzer.py  compare_quarterly_vs_monthly.py  comprehensive_comparison.py  duration_simulator.py  enhanced_statistical_analyzer.py  excel_validator.py  optimized_rolling_analyzer.py  paired_strategy_comparison.py
